@@ -1,4 +1,5 @@
 version 0.70.01
+	File format support for commandline interface (--file_format)
 	GUI bugfix
 	Deleted useless current_zoom field
 	More commandline status info
